name:                gitbunker
version:             0.0.1
synopsis:            A gitolite-like, but in haskell
-- description:
license:             BSD3
license-file:        LICENSE
author:              Nicolas DI PRIMA
maintainer:          nicolas@di-prima.fr
copyright:           Nicolas DI PRIMA <nicolas@di-prima.fr>
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

Flag executable
  Description:       Build the executable
  Default:           False

library
  Build-depends:     base >= 4 && < 5
                   , bytestring
                   , transformers
                   , persistent
                   , esqueleto
                   , persistent-template
                   , persistent-sqlite
                   , monad-control
                   , monad-logger
                   , conduit
                   , text
  exposed-modules:   Data.GitBunker.Hitolite
                   , Data.GitBunker.Database
  build-depends:       base >=4.6 && <4.7
  default-language:  Haskell2010
  ghc-options:       -Wall -fno-warn-missing-signatures

executable           hitolite
  main-is:           Hitolite.hs
  hs-source-dirs:    GitBunker
  default-language:  Haskell2010
  ghc-options:       -Wall -fno-warn-orphans -fno-warn-missing-signatures
  if flag(executable)
    Build-depends:   base >= 4 && < 5
                   , process
                   , unix
                   , bytestring
                   , hslogger
                   , gitbunker
    Buildable: True
  else
    Buildable: False

executable           hitolitedb
  main-is:           HitoliteDB.hs
  hs-source-dirs:    GitBunker
  default-language:  Haskell2010
  ghc-options:       -Wall -fno-warn-orphans -fno-warn-missing-signatures
  if flag(executable)
    Build-depends:   base >= 4 && < 5
                   , persistent
                   , process
                   , unix
                   , bytestring
                   , hslogger
                   , gitbunker
    Buildable: True
  else
    Buildable: False

executable           bunkerdb
  main-is:           BunkerDB.hs
  hs-source-dirs:    GitBunker
  default-language:  Haskell2010
  ghc-options:       -Wall -fno-warn-orphans -fno-warn-missing-signatures
  if flag(executable)
    Build-depends:   base >= 4 && < 5
                   , persistent
                   , process
                   , unix
                   , bytestring
                   , hslogger
                   , gitbunker
    Buildable: True
  else
    Buildable: False

executable           check_authorizedkeys
  main-is:           CheckAuthorizedkeys.hs
  hs-source-dirs:    GitBunker
  default-language:  Haskell2010
  ghc-options:       -Wall -fno-warn-orphans -fno-warn-missing-signatures
  if flag(executable)
    Build-depends:   base >= 4 && < 5
                   , persistent
                   , process
                   , unix
                   , bytestring
                   , hslogger
                   , gitbunker
    Buildable: True
  else
    Buildable: False
