name:                hitolite
version:             0.0.0
synopsis:            A gitolite-like, but in haskell
-- description:
license:             BSD3
license-file:        LICENSE
author:              Nicolas DI PRIMA
maintainer:          nicolas@di-prima.fr
copyright:           Nicolas DI PRIMA <nicolas@di-prima.fr>
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

Flag executable
  Description:       Build the executable
  Default:           False

library
  Build-depends:     base >= 4 && < 5
                   , bytestring
  exposed-modules:   Data.Hitolite.GitCommand
  build-depends:       base >=4.6 && <4.7
  default-language:  Haskell2010
  ghc-options:       -Wall -fno-warn-missing-signatures

executable           hitolite
  main-is:           Hitolite.hs
  hs-source-dirs:    Hitolite
  default-language:  Haskell2010
  ghc-options:       -Wall -fno-warn-orphans -fno-warn-missing-signatures
  if flag(executable)
    Build-depends:   base >= 4 && < 5
                   , process
                   , unix
                   , bytestring
                   , hitolite
    Buildable: True
  else
    Buildable: False

